# ie-titanic-utils

./: app.py  ie_utils.py  pyproject.toml  requirements.txt
src/ie_utils/: __init__.py  __main__.py  constants.py
src/ie_utils/.ipynb_checkpoints/: __init__-checkpoint.py
tests/: test_ie_utils.py  untitled.txt
