[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "ie_utils"
author = "Inigo Hidalgo"
author-email = "inigo.hidalgo@student.ie.edu"
home-page = "https://inigohidalgo.me"
requires=[
    "pandas",
    # "flask", # instead, use requirements.txt since technically the library does not require flask
]

[tool.flit.metadata.requires-extra]

dev = [
    "black",
]

[tool.flit.entrypoints."console_scripts"]
ie_tokenize = "ie_utils.__main__:main"